# gpx_split_rs

./: .gitignore  Cargo.toml  README.md  build.rs  foo_0.gpx  foo_1.gpx  foo_2.gpx  foo_3.gpx  foo_4.gpx  foo_5.gpx  foo_6.gpx  foo_7.gpx
.github/workflows/: build.yaml
src/: dist.rs  geo.rs  io.rs  lib.rs  limit.rs  main.rs  split.rs
tests/: split_it.rs
tests/res/: pois.gpx  route_len.gpx  track_loc.gpx
