[package]
name = "gpx_split"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Mario Schroeder <spindizzy@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.1"
gpx = "0.9.1"
geo = "0.27.0"
geo-types = "0.7.11"
log = "0.4.20"
geographiclib-rs = "0.2.4"

[build-dependencies]
copy_to_output = "2.1.0"

[dev-dependencies]
approx_eq = "0.1.8"
